# meme-coin-monitor

./: .env.example  .gitignore  BUGS.md  MOM-TEST-ANALYSIS.md  README.md  deploy.sh  pyproject.toml  requirements.txt
config/: default.yaml
dashboard/: app.js  index.html  login.html  style.css
dashboard-stash-20260129-205234/: app.js  index.html  login.html  style.css
dashboard/backup-tokyo-night/: app.js  index.html
meme_coin_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: check_alerts.py  cleanup_data.py  create_users.py  seed_data.py  test_onchain.py
src/: __init__.py  config.py  main.py
src/alerts/: __init__.py  alert_manager.py  telegram.py  webhook.py
src/analysis/: __init__.py  base.py  contract_analyzer.py  holder_analyzer.py  liquidity_analyzer.py  opportunity_tracker.py  pattern_learner.py  pattern_matcher.py  trading_analyzer.py
src/api/: __init__.py  routes.py  server.py
src/auth/: middleware.py  models.py  repository.py  routes.py
src/ingestion/: __init__.py  base.py  dex_screener.py  evm_rpc.py  pump_fun.py  pump_fun_onchain.py  scheduler.py  solana_rpc.py
src/scoring/: __init__.py  opportunity_scorer.py  risk_scorer.py
src/storage/: __init__.py  database.py  models.py  repositories.py
src/utils/: __init__.py  formatting.py  key_rotator.py  solana.py
tests/: __init__.py  conftest.py  test_alerts.py  test_analyzers.py  test_api.py  test_evm_rpc.py  test_ingestion.py  test_key_rotator.py  test_pattern_learner.py  test_scoring.py
tests/fixtures/: sample_tokens.json
